# random_tools

./: .gitignore  CMakeLists.txt  README.md  __init__.py  setup.py
config/: conf.yaml  conf_test.json  conf_test.yaml  conf_test.yaml.json  test.fbs
frp/: README.md  frpc.ini  frpc.service  frps.ini  frps.service  install_frpc.sh  install_frps.sh
include/: Config.h  ConfigLocal.h  ConfigRemote.h  Discovery.h  Json2Eigen.hpp  Json2Manif.hpp  Json2Numpy.hpp  JsonDataset.hpp  JsonEigen.h  JsonOpencv.hpp  JsonYaml.h  NamedBundle.hpp  OpencvAsync.h  OpencvUtils.h  PubSub.h  Rpc.h  TsQueue.h
include/remote_config/: Json2Eigen.hpp  JsonEigenUtils.h  Rpc.h  Server.h  test_generated.h
remote_config/: __init__.py  client.py  server.py
remote_config.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
remote_tools/: __init__.py  client.py  rpc_client.py  yaml2json.py
scripts/: log_plot_helpers.py  syncup.py
src/: Server.cpp
test/: CMakeLists.txt  config_client.py  doctest_json.cpp  doctest_json_yaml.cpp  test_config.cpp  test_config_asio_zmq.cpp  test_config_server.cpp  test_config_server.py  test_config_server_unit.py  test_handmade.cpp  test_json_eigen_map.cpp  test_pub.cpp  test_rpc.cpp  test_rpc_async_server_and_client.cpp  test_rpc_client.cpp  test_rpc_server.cpp  test_server.cpp  test_server.py  test_sub.cpp  test_types.cpp  test_yaml.cpp
